data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1350.wast
;; 1. **Test Description:**    - **Test Name:** Imported Function Branch Test    - **Objective:** Verify that the `br` instruction can correctly handle an unconditional branch to a label within an imported function.    - **Constraint:** The test checks if the target label from the calling module is within the valid structured control instructions of the imported function.    - **Relation to Incorrect Handling:** Ensures that the control flow between modules remains intact and the operand stack is correctly managed.

(assert_invalid
  (module
    (func $imported_func (import "env" "importedFunc") (param i32) (result i32))
    (func $test_func
      (call $imported_func (br 0 (i32.const 42)))
    )
  )
  "type mismatch"
)